--- a/angular-frontend/src/app/explore-container/explore-container.component.scss
+++ b/angular-frontend/src/app/explore-container/explore-container.component.scss
@@ -4,7 +4,13 @@
   margin-top: 10px;
 }
 
-canvas {
-  width: 100% !important;
-  height: auto !important;
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+#threejs-container {
+  flex-grow: 1; /* Let other content fill the remaining space */
+  height: 100%;
 }
