--- a/angular-frontend/src/app/explore-container/explore-container.component.scss
+++ b/angular-frontend/src/app/explore-container/explore-container.component.scss
@@ -14,3 +14,8 @@
   flex-grow: 1; /* Let other content fill the remaining space */
   height: 100%;
 }
+
+#cartesian-container {
+  flex-grow: 1; /* Let other content fill the remaining space */
+  height: 100%;
+}
