--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -8,10 +8,12 @@
   <ion-grid>
     <ion-row>
       <!-- Three.js Canvas on the left side -->
-      <ion-col size="6">
-        <div class="container">
+      <ion-col size="6" class="container">
+
           <div id="threejs-container" #threejsContainer style="width: 100%; height: 100%;"></div>
-        </div>
+
+          <div id="cartesian-container" #cartesianContainer style="width: 100%; height: 100%;"></div>
+
       </ion-col>
 
       <ion-col size="6">
@@ -24,10 +26,10 @@
 
               <ion-button (click)="startObjectDetection()">Obj Detection</ion-button>
               <ion-toggle [(ngModel)]="isEnabled" (ion-change)="toggleEnable($event)">Enable Control</ion-toggle>
-          
+
             </ion-card-content>
           </ion-card>
-      
+
           <ion-card>
             <ion-card-header>
               <ion-card-title>Tilt Data</ion-card-title>
@@ -36,7 +38,7 @@
               <ion-text id="tiltAngles-content">Loading...</ion-text>
             </ion-card-content>
           </ion-card>
-        
+
           <ion-card>
             <ion-card-header>
               <ion-card-title>Accelerometer Data</ion-card-title>
@@ -54,7 +56,7 @@
               <ion-text id="motor1-content">Loading...</ion-text>
             </ion-card-content>
           </ion-card>
-        
+
           <ion-card>
             <ion-card-header>
               <ion-card-title>Servo Pulse Width</ion-card-title>
@@ -63,7 +65,7 @@
               <ion-text id="servo1-content">Loading...</ion-text>
             </ion-card-content>
           </ion-card>
-      
+
           <ion-card>
             <ion-card-header>
               <ion-card-title>Height Level</ion-card-title>
@@ -75,7 +77,7 @@
               </ion-range>
             </ion-card-content>
           </ion-card>
-        
+
           <ion-card>
             <ion-card-header>
               <ion-card-title>Console</ion-card-title>
@@ -84,9 +86,9 @@
               <div id="console-content" style="max-height: 200px; overflow-y: auto;"></div>
             </ion-card-content>
           </ion-card>
-        
+
           <ion-card>
-            
+
             <ion-grid>
               <ion-row>
                 <ion-col size="12" class="ion-text-center">
@@ -105,7 +107,7 @@
                 </ion-col>
               </ion-row>
             </ion-grid>
-          
+
             </ion-card>
 
       </ion-col>
