--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -8,20 +8,34 @@
   <ion-grid>
     <ion-row>
       <!-- Three.js Canvas on the left side -->
-      <ion-col size="6" class="container">
+      <ion-col size="6">
 
-          <div id="threejs-container" #threejsContainer style="width: 100%; height: 100%;"></div>
-
-          <div id="cartesian-container" #cartesianContainer style="width: 100%; height: 100%;"></div>
-
+          <div id="threejs-container" #threejsContainer style="width: 100%; height: 500px"></div>
       </ion-col>
 
       <ion-col size="6">
+
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Height Level</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-range [(ngModel)]="heightLevel" min="1" max="3" step="1" color="primary" (ionChange)="updateHeight($event)">
+              <ion-label slot="start">1</ion-label>
+              <ion-label slot="end">3</ion-label>
+            </ion-range>{{ heightLevel }}
+          </ion-card-content>
+        </ion-card>
+
           <ion-card>
             <ion-card-header>
               <ion-card-title>Status</ion-card-title>
             </ion-card-header>
             <ion-card-content>
+              Dyn update
+              <ion-toggle [(ngModel)]="isDynamic" (ionChange)="toggleDynamic($event)"></ion-toggle>
+              <br />
+
               <ion-text color="primary">{{ status }}</ion-text>
 
               <ion-button (click)="startObjectDetection()">Obj Detection</ion-button>
@@ -66,17 +80,7 @@
             </ion-card-content>
           </ion-card>
 
-          <ion-card>
-            <ion-card-header>
-              <ion-card-title>Height Level</ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              <ion-range [(ngModel)]="heightLevel" min="1" max="5" step="1" color="primary" (ion-change)="updateHeight($event)">
-                <ion-label slot="start">1</ion-label>
-                <ion-label slot="end">5</ion-label>
-              </ion-range>
-            </ion-card-content>
-          </ion-card>
+
 
           <ion-card>
             <ion-card-header>
