--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -20,7 +20,7 @@
             <ion-card-title>Height Level</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-range [(ngModel)]="heightLevel" min="1" max="3" step="1" color="primary" (ionChange)="updateHeight($event)">
+            <ion-range [(ngModel)]="heightLevel" min="1" max="3" step="1" color="primary" (ionChange)="adjustHeightEvent($event)">
               <ion-label slot="start">1</ion-label>
               <ion-label slot="end">3</ion-label>
             </ion-range>{{ heightLevel }}
