--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -20,10 +20,36 @@
             <ion-card-title>Height Level</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-range [(ngModel)]="heightLevel" min="1" max="3" step="1" color="primary" (ionChange)="adjustHeightEvent($event)">
-              <ion-label slot="start">1</ion-label>
-              <ion-label slot="end">3</ion-label>
-            </ion-range>{{ heightLevel }}
+            <ion-grid>
+              <ion-row>
+                <ion-col size="6">
+                  <ion-range [(ngModel)]="heightLevel" min="1" max="3" step="1" color="primary" (ionChange)="adjustHeightEvent($event)">
+                    <ion-label slot="start">1</ion-label>
+                    <ion-label slot="end">3</ion-label>
+                  </ion-range>{{ heightLevel }}
+                </ion-col>
+                <ion-col size="6">
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col size="12" class="ion-text-center">
+                        <ion-button (click)="sendControlCommand('forward')">W</ion-button>
+                      </ion-col>
+                    </ion-row>
+                    <ion-row>
+                      <ion-col size="4" class="ion-text-center">
+                        <ion-button (click)="sendControlCommand('left')">A</ion-button>
+                      </ion-col>
+                      <ion-col size="4" class="ion-text-center">
+                        <ion-button (click)="sendControlCommand('backward')">S</ion-button>
+                      </ion-col>
+                      <ion-col size="4" class="ion-text-center">
+                        <ion-button (click)="sendControlCommand('right')">D</ion-button>
+                      </ion-col>
+                    </ion-row>
+                  </ion-grid>
+              </ion-col>
+            </ion-row>
+            </ion-grid>
           </ion-card-content>
         </ion-card>
 
@@ -90,29 +116,6 @@
               <div id="console-content" style="max-height: 200px; overflow-y: auto;"></div>
             </ion-card-content>
           </ion-card>
-
-          <ion-card>
-
-            <ion-grid>
-              <ion-row>
-                <ion-col size="12" class="ion-text-center">
-                  <ion-button (click)="sendControlCommand('forward')">W</ion-button>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="4" class="ion-text-center">
-                  <ion-button (click)="sendControlCommand('left')">A</ion-button>
-                </ion-col>
-                <ion-col size="4" class="ion-text-center">
-                  <ion-button (click)="sendControlCommand('backward')">S</ion-button>
-                </ion-col>
-                <ion-col size="4" class="ion-text-center">
-                  <ion-button (click)="sendControlCommand('right')">D</ion-button>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-
-            </ion-card>
 
       </ion-col>
     </ion-row>
