--- a/angular-frontend/src/app/explore-container/explore-container.component.scss
+++ b/angular-frontend/src/app/explore-container/explore-container.component.scss
@@ -7,3 +7,22 @@
 #threejs-container {
   margin-bottom: 20px;
 }
+
+.pulse-effect {
+  animation: pulse 300ms ease-out;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
