--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -102,7 +102,7 @@
                       <ion-card-title class="ml-2">Accelerometer</ion-card-title>
                     </div>
                     <ion-card-content class="secondary">
-                      <ion-text [color]="enableSensorAdjustements ? 'primary' : 'secondary" id="accelData-content">Loading...</ion-text>
+                      <ion-text [color]="enableSensorAdjustements ? 'primary' : 'secondary'" id="accelData-content">Loading...</ion-text>
                     </ion-card-content>
                   </ion-card>
                   </ion-col>
@@ -112,7 +112,7 @@
                       <ion-card-title class="ml-2">Tilt Data</ion-card-title>
                     </div>
                     <ion-card-content>
-                      <ion-text [color]="enableSensorAdjustements ? 'primary' : 'secondary" id="tiltAngles-content">Loading...</ion-text>
+                      <ion-text [color]="enableSensorAdjustements ? 'primary' : 'secondary'" id="tiltAngles-content">Loading...</ion-text>
                     </ion-card-content>
                   </ion-card>
                   </ion-col>
