--- a/angular-frontend/src/app/explore-container/explore-container.component.html
+++ b/angular-frontend/src/app/explore-container/explore-container.component.html
@@ -42,7 +42,7 @@
                   <div>
                     <ion-toggle
                       [checked]="isSensorAdjustmentEnabled"
-                      (ionChange)="sendEnableSensorCommand($event)"
+                      (ionChange)="toggleEnableSensor()"
                       >Enable Sensor Adjustments</ion-toggle
                     >
                   </div>
@@ -54,6 +54,43 @@
                 </ion-col>
                 <ion-col size="6">
                   <ion-grid>
+                    <ion-row>
+                      <ion-col size="4" class="ion-text-center">
+                        
+                          <ion-label position="stacked">Kp</ion-label>
+                          <input
+                            [(ngModel)]="Kp"
+                            type="number"
+                            placeholder="Kp"
+                            (change)="updatePID()"
+                          />
+                        
+                      </ion-col>
+                  
+                      <ion-col size="4" class="ion-text-center">
+                        
+                          <ion-label position="stacked">Ki</ion-label>
+                          <input
+                            [(ngModel)]="Ki"
+                            type="number"
+                            placeholder="Ki"
+                            (change)="updatePID()"
+                          />
+                        
+                      </ion-col>
+                  
+                      <ion-col size="4" class="ion-text-center">
+                        
+                          <ion-label position="stacked">Kd</ion-label>
+                          <input
+                            [(ngModel)]="Kd"
+                            type="number"
+                            placeholder="Kd"
+                            (change)="updatePID()"
+                          />
+                        
+                      </ion-col>
+                    </ion-row>
                     <ion-row>
                       <ion-col size="12" class="ion-text-center">
                         <ion-button (click)="sendControlCommand('forward')"
@@ -89,7 +126,7 @@
           </ion-card-content>
         </ion-card>
 
-        <ion-card color="medium">
+        <ion-card>
           <ion-card-header>
             <ion-card-title>Raw Data</ion-card-title>
           </ion-card-header>
@@ -97,24 +134,12 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="6">
-                  <ion-card>
-                    <div>
-                      <ion-card-title class="ml-2">Accelerometer</ion-card-title>
-                    </div>
-                    <ion-card-content class="secondary">
-                      <ion-text [color]="enableSensorAdjustements ? 'primary' : 'secondary'" id="accelData-content">Loading...</ion-text>
-                    </ion-card-content>
-                  </ion-card>
-                  </ion-col>
+                  <h2>Accelerometer</h2>
+                  <ion-text [color]="isSensorAdjustmentEnabled ? 'primary' : 'secondary'" id="accelData-content">Loading...</ion-text>
+                </ion-col>
                 <ion-col size="6">
-                  <ion-card>
-                    <div>
-                      <ion-card-title class="ml-2">Tilt Data</ion-card-title>
-                    </div>
-                    <ion-card-content>
-                      <ion-text [color]="enableSensorAdjustements ? 'primary' : 'secondary'" id="tiltAngles-content">Loading...</ion-text>
-                    </ion-card-content>
-                  </ion-card>
+                  <h2>Tilt Data</h2>
+                      <ion-text [color]="isSensorAdjustmentEnabled ? 'primary' : 'secondary'" id="tiltAngles-content">Loading...</ion-text>
                   </ion-col>
               </ion-row>
             </ion-grid>
@@ -126,7 +151,7 @@
         </ion-card>
 
 
-        <ion-card color="medium">
+        <ion-card>
           <ion-card-header>
             <ion-card-title>Output for Motors</ion-card-title>
           </ion-card-header>
@@ -135,11 +160,7 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="6">
-                  <ion-card>
-                    <div>
-                      <ion-card-title class="ml-2">Motor PWM</ion-card-title>
-                    </div>
-                    <ion-card-content>
+                  <h2>Motor PWM</h2>
                       <div id="motor-content">
                         <span id="left-motor"
                           >Left Motor PWM: <span id="left-motor-value">_</span></span
@@ -148,27 +169,20 @@
                           >Right Motor PWM: <span id="right-motor-value">_</span></span
                         >
                       </div>
-                    </ion-card-content>
-                  </ion-card>
-                  </ion-col>
+                   </ion-col>
                 <ion-col size="6">
-                  <ion-card>
-                    <div>
-                      <ion-card-title class="ml-2">Servo Pulse </ion-card-title>
-                    </div>
-                    <ion-card-content>
+                  <h2>Servo Pulse </h2>
                       <div id="servo-content">
                         <span id="left-servo"
-                          >Left Servo Pulse Width:
-                          <span id="left-servo-value">_</span></span
+                          >Left Servo Pulse:
+                          <span id="left-servo-value">_</span>µs</span
                         ><br />
                         <span id="right-servo"
-                          >Right Servo Pulse Width:
-                          <span id="right-servo-value">_</span></span
+                          >Right Servo Pulse:
+                          <span id="right-servo-value">_</span>µs</span
                         >
                       </div>
-                    </ion-card-content>
-                  </ion-card>
+                    
                   </ion-col>
               </ion-row>
             </ion-grid>
@@ -176,8 +190,6 @@
             
           </ion-card-content>
         </ion-card>
-
-       
 
         <ion-card>
           <ion-card-header>
